--- a/module3_solution/css/stylesheet.css
+++ b/module3_solution/css/stylesheet.css
@@ -47,7 +47,7 @@ section {
 	font-size: 125%;
 	padding: 5px;
 	background-color: #F08080;
-	margin-left: 70%;
+	margin-left: 50%;
 	margin-top, margin-bottom: 0;
 }
 
@@ -60,7 +60,7 @@ section {
 	font-size: 125%;
 	padding: 5px;
 	background-color: #FF0000;
-	margin-left: 70%;
+	margin-left: 50%;
 	margin-top, margin-bottom: 0;
 }
 
@@ -73,7 +73,7 @@ section {
 	font-size: 125%;
 	padding: 5px;
 	background-color: #FFD700;
-	margin-left: 70%;
+	margin-left: 50%;
 	margin-top, margin-bottom: 0;
 }
 
@@ -95,16 +95,19 @@ section {
 .navbar-brand {
 	font-size: 2em;
 	border: 0 0 10px 10px;
+	color: #FFFFFF;
 }
 
 #header-nav {
 	border: 0;
-	background-color: ;
+	background-color: #FC5F06;
+	color: #FFFFFF;
 }
 
 .navbar-header button.navbar-toggle, .navbar-header .icon-bar {
   border: 1px solid #61122f;
 }
+
 .navbar-header button.navbar-toggle {
   clear: both;
   margin-top: -30px;
